# JoeNet

./: agents.py  baseline_tournament.py  buffers.py  cards.py  config.py  engine.py  evaluate_arena.py  export_onnx.py  fast_engine.py  game_context.py  generate_sandbox_data.py  mastery_arena.py  network.py  neural_agent.py  plan.md  player.py  pyproject.toml  reward.py  rl_buffer.py  rl_math.py  rl_trainer.py  rules.md  run_a_b_test.py  run_benchmark.py  run_mastery.py  spec.md  train_rl.py  train_supervised.py
tests/: test_action_mask.py  test_agents.py  test_baseline_tournament.py  test_buffers.py  test_cards.py  test_config.py  test_data_generation.py  test_engine_parity.py  test_evaluate_arena.py  test_game_context.py  test_joe_engine.py  test_mastery_arena.py  test_network.py  test_neural_agent.py  test_neural_agent_exploration.py  test_onnx_export.py  test_player.py  test_rewards.py  test_rl_buffer.py  test_rl_math.py  test_rl_trainer.py  test_supervised.py  test_train_rl.py  test_utils.py
