[project]
name = "joenet"
version = "0.1.0"
description = "This project implements the AI for the multiplayer imperfect-information Rummy-variant 'Joe' using a state-of-the-art Deep Reinforcement Learning (Actor-Critic) architecture, augmented by an Oracle (Belief State) network ."
requires-python = ">=3.13"
dependencies = [
    "torch",
    "h5py>=3.15.1",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.4",
    "onnx>=1.20.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
# Standard line length; 88 is Black's default, but 100 gives a bit more breathing room
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Enable standard rule groups:
# E: pycodestyle errors
# F: Pyflakes (catches unused variables/imports)
# I: isort (automatically sorts imports)
# B: flake8-bugbear (finds common logic bugs)
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
# Standardize formatting to match the 'Black' style
quote-style = "double"
indent-style = "space"


[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-gpu" }]

[tool.pytest.ini_options]
pythonpath = ["."]
# Silence the terminal output
log_cli = false

# Route all logging across the entire project into the logs folder
log_file = "logs/tests.log"
log_file_level = "WARNING"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"